--- a/app/styles/mixins.css
+++ b/app/styles/mixins.css
@@ -1,23 +1,16 @@
-.gradient(@bgPos1: 0%; @bgPos2: 20%; @bgPos3: 42%; @bgPos4: 73%) {
+@define-mixin gradient $bgPos1: 0%, $bgPos2: 20%, $bgPos3: 42%, $bgPos4: 73% {
 
-	@bgColor1: rgba(0,0,0,0);
-	@bgColor2: rgba(0,0,0,0.6);
-	@bgColor3: rgba(0,0,0,0.8);
-	@bgColor4: rgba(0,0,0,0.9);
+	$bgColor1: rgba(0,0,0,0);
+	$bgColor2: rgba(0,0,0,0.6);
+	$bgColor3: rgba(0,0,0,0.8);
+	$bgColor4: rgba(0,0,0,0.9);
 
-	background: -moz-linear-gradient(top, @bgColor1 0%, @bgColor2 @bgPos2,@bgColor3 @bgPos3,  @bgColor4 @bgPos4,  @bgColor4 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(@bgPos1, @bgColor1), color-stop(@bgPos2, @bgColor2), color-stop(@bgPos3,@bgColor3), color-stop(@bgPos4,@bgColor4), color-stop(100%,@bgColor4)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, @bgColor1 @bgPos1,@bgColor2 @bgPos2,@bgColor3 @bgPos3,  @bgColor4 @bgPos4, @bgColor4 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, @bgColor1 @bgPos1, @bgColor2 @bgPos2,@bgColor3 @bgPos3,  @bgColor4 @bgPos4, @bgColor4 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, @bgColor1 @bgPos1, @bgColor2 @bgPos2,@bgColor3 @bgPos3,  @bgColor4 @bgPos4, @bgColor4 100%); /* IE10+ */
-	background: linear-gradient(to bottom, @bgColor1 @bgPos1, @bgColor2 @bgPos2,@bgColor3 @bgPos3,  @bgColor4 @bgPos4, @bgColor4 100%); /* W3C */
+	background: -moz-linear-gradient(top, $bgColor1 0%, $bgColor2 $bgPos2, $bgColor3 $bgPos3, $bgColor4 $bgPos4, $bgColor4 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop($bgPos1, $bgColor1), color-stop($bgPos2, $bgColor2), color-stop($bgPos3, $bgColor3), color-stop($bgPos4, $bgColor4), color-stop(100%, $bgColor4)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, $bgColor1 $bgPos1, $bgColor2 $bgPos2, $bgColor3 $bgPos3, $bgColor4 $bgPos4, $bgColor4 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, $bgColor1 $bgPos1, $bgColor2 $bgPos2, $bgColor3 $bgPos3, $bgColor4 $bgPos4, $bgColor4 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, $bgColor1 $bgPos1, $bgColor2 $bgPos2, $bgColor3 $bgPos3, $bgColor4 $bgPos4, $bgColor4 100%); /* IE10+ */
+	background: linear-gradient(to bottom, $bgColor1 $bgPos1, $bgColor2 $bgPos2, $bgColor3 $bgPos3, $bgColor4 $bgPos4, $bgColor4 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#e6000000',GradientType=0 ); /* IE6-9 */
 	-ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000',endColorstr='#e6000000',GradientType=0);
-}
-
-.resize-dropdown-menu(@width; @left) {
-	> .dropdown-menu{
-		width: @width;
-		left: @left;
-	}
 }
