--- a/app/views/MainMenu/MainMenu.css
+++ b/app/views/MainMenu/MainMenu.css
@@ -1,90 +1,95 @@
-@bg-color: #c7c7c7;
+@value colors: 'styles/variables.css';
+@value text-color-dark-1, font-size-medium from colors;
 
-.menu {
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100%;
+.menuContainer{
 	height: 100%;
+	left: 0;
 	overflow: hidden;
 	pointer-events: none;
-	z-index: 150;
-}
-
-.menu--visible {
-	pointer-events: auto;
-}
-
-.app-menu {
-	background-color: @bg-color;
-	position: relative;
-	max-width: 500px;
-	width: 90%;
-	height: 100%;
-	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
-	-webkit-transform: translateX(-103%);
-	transform: translateX(-103%);
-	display: flex;
-	flex-direction: column;
-	will-change: transform;
-	z-index: 160;
-	pointer-events: auto;
-
-	&-ul{
-		margin: 0;
-		padding: 0;
-	}
-
-	&-li{
-		font-size: @font-size-medium;
-		cursor: pointer;
-		border-bottom: 1px solid darken(@bg-color, 5%);
-
-		a{
-			padding: 10px 20px;
-			color: @text-color-dark-1;
-			text-decoration: none;
-			display: block;
-		}
-
-		&:hover{
-			background-color: darken(@bg-color, 5%);
-		}
-	}
-
-	.material-icons{
-		margin-right: 5px;
-	}
-}
-
-.menu--visible .app-menu {
-	-webkit-transform: none;
-	transform: none;
-}
-
-.menu--animatable .app-menu {
-	transition: all 200ms ease-in;
-}
-
-.menu--animatable .app-menu {
-	transition: all 330ms ease-out;
-}
-
-.menu:after {
-	content: '';
-	display: block;
 	position: absolute;
-	left: 0;
 	top: 0;
 	width: 100%;
-	height: 100%;
-	opacity: 0;
-	will-change: opacity;
-	pointer-events: none;
-	transition: opacity 0.3s cubic-bezier(0,0,0.3,1);
+	z-index: 150;
+
+	&:after{
+		content: '';
+		display: block;
+		height: 100%;
+		left: 0;
+		opacity: 0;
+		pointer-events: none;
+		position: absolute;
+		top: 0;
+		transition: opacity 0.3s cubic-bezier(0,0,0.3,1);
+		width: 100%;
+		will-change: opacity;
+	}
+
+	&__visible{
+		pointer-events: auto;
+
+		&:after{
+			opacity: 1;
+			pointer-events: auto;
+		}
+
+		.menuContainerInner{
+			-webkit-transform: none;
+			transform: none;
+		}
+	}
+
+	&__animatable{
+		.menuContainerInner{
+			transition: all 200ms ease-in;
+		}
+	}
+
+	&__visible&__animatable{
+		.menuContainerInner{
+			transition: all 330ms ease-out;
+		}
+	}
+
+	&Inner{
+		background-color: #c7c7c7;
+		display: flex;
+		flex-direction: column;
+		height: 100%;
+		max-width: 500px;
+		pointer-events: auto;
+		position: relative;
+		transform: translateX(-103%);
+		-webkit-transform: translateX(-103%);
+		width: 90%;
+		will-change: transform;
+		z-index: 160;
+	}
 }
 
-.menu--visible:after {
-	opacity: 1;
-	pointer-events: auto;
+.menu{
+	margin: 0;
+	padding: 0;
+
+	&Item{
+		/* TODO */
+		border-bottom: 1px solid color(#c7c7c7 lightness(-5%));
+		cursor: pointer;
+		font-size: font-size-medium;
+
+		&:hover{
+			/* TODO */
+			background-color: color(#c7c7c7 lightness(-5%));
+		}
+
+		&Link{
+			color: text-color-dark-1;
+			display: block;
+			padding: 10px 20px;
+		}
+
+		&Icon{
+			margin-right: 5px;
+		}
+	}
 }
