--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -1,5 +1,5 @@
 @value colors: './variables.css';
-@value background-color-light-1, text-color-light-2 from colors;
+@value background-color-dark-1, text-color-light-2 from colors;
 
 body{
 	background-color: #151515;
@@ -38,7 +38,7 @@ a{
 }
 
 .formControl{
-	background-color: background-color-light-1;
-	border: 1px solid background-color-light-1;
+	background-color: background-color-dark-1;
+	border: 1px solid background-color-dark-1;
 	color: text-color-light-2;
 }
