--- a/app/components/PlaylistSong/PlaylistSong.css
+++ b/app/components/PlaylistSong/PlaylistSong.css
@@ -1,5 +1,5 @@
-@value colors: 'styles/variables.css';
-@value text-color-dark-1, font-size-medium from colors;
+@value CONSTANTS: 'styles/variables.css';
+@value text-color-dark-1, font-size-medium from CONSTANTS;
 
 .song__playlistVotes{
 	color: text-color-dark-1;
