--- a/app/components/SongsList/SongsList.css
+++ b/app/components/SongsList/SongsList.css
@@ -1,5 +1,5 @@
-@value colors: 'styles/variables.css';
-@value base-space, light-yellow, font-size-medium from colors;
+@value CONSTANTS: 'styles/variables.css';
+@value base-space, light-yellow, font-size-medium from CONSTANTS;
 
 .songsListInfo{
 	color: light-yellow;
