[update] player component and app theme

--- a/app/components/MainMenu/MainMenu.css
+++ b/app/components/MainMenu/MainMenu.css
@@ -1,5 +1,5 @@
 @value CONSTANTS: 'styles/variables.css';
-@value text-color-dark-1, font-size-medium from CONSTANTS;
+@value bg-color-1, bg-color-2, bg-color-3, bg-color-4, text-color-light-1, text-color-light-2, text-color-dark-1, light-blue, light-yellow,font-size-small, font-size-normal, font-size-medium, font-size-large, navbar-height, player-height from CONSTANTS;
 
 .menuContainer{
 	height: 100%;
@@ -79,7 +79,7 @@
 
 		&:hover{
 			/* TODO */
-			background-color: color(#c7c7c7 lightness(-5%));
+			background-color: color(#c7c7c7 lightness(-10%));
 		}
 
 		&Link{
