--- a/app/components/Player/Player.css
+++ b/app/components/Player/Player.css
@@ -1,9 +1,9 @@
 @value CONSTANTS: 'styles/variables.css';
-@value background-color-dark-2, player-height, text-color-light-1, text-color-light-2, font-size-medium, font-size-large, navbar-height from CONSTANTS;
+@value bg-color-1, bg-color-2, bg-color-3, bg-color-4, text-color-light-1, text-color-light-2, text-color-dark-1, light-blue, light-yellow,font-size-small, font-size-normal, font-size-medium, font-size-large, navbar-height, player-height from CONSTANTS;
 
 .player{
 	composes: u-position-bottom from 'styles/util.css';
-	background-color: background-color-dark-2;
+	background-color: bg-color-1;
 	height: player-height;
 	margin: 0;
 	transition-delay: 0.1s;
@@ -13,7 +13,6 @@
 
 	&__opened{
 		composes: player;
-		background-color: background-color-dark-2;
 		/* TODO */
 		height: calc(100% - 50px);
 
@@ -51,6 +50,11 @@
 	}
 }
 
+.expandButtonContainer{
+	composes: u-position-left-top from 'styles/util.css';
+	width: 100%;
+}
+
 .expandButton{
 	color: text-color-light-1;
 	padding: 0;
@@ -58,7 +62,7 @@
 }
 
 .contentWrapper{
-	margin: 0;
+	height: 100%;
 }
 
 .songThumbnail{
@@ -69,6 +73,7 @@
 }
 
 .playerProgressBar{
+	background-color: bg-color-3;
 	height: 5px;
 	margin: 0 auto;
 	max-width: 100%;
@@ -90,12 +95,12 @@
 .songTitle{
 	composes: songDetail;
 	composes: u-cut-text from 'styles/util.css';
-	margin-top: 7px;
+	margin-top: 4px;
 }
 
 .controlButtons{
 	color: text-color-light-2;
-	margin-top: 7px;
+	margin-top: 8px;
 }
 
 .playerPluginContainer{
@@ -104,14 +109,19 @@
 	z-index: 1;
 }
 
+.playingSongContainer{
+	height: 100%;
+	margin: 0;
+	padding-top: 28px;
+}
+
 .noPlayingSongContainer{
-	composes: u-position-left-top from 'styles/util.css';
 	background-color: black;
 	color: text-color-light-1;
-	font-size: font-size-large;
+	font-size: font-size-medium;
 	font-weight: bold;
 	height: 100%;
-	padding-top: 30px;
-	width: 100%;
-	z-index: 10;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
