--- a/app/components/PlaylistSong/PlaylistSong.css
+++ b/app/components/PlaylistSong/PlaylistSong.css
@@ -1,7 +1,8 @@
 @value CONSTANTS: 'styles/variables.css';
-@value text-color-dark-1, font-size-medium from CONSTANTS;
+@value bg-color-1, bg-color-2, bg-color-3, bg-color-4, text-color-light-1, text-color-light-2, text-color-dark-1, light-blue, light-yellow,font-size-small, font-size-normal, font-size-medium, font-size-large, navbar-height, player-height from CONSTANTS;
 
 .song__playlistVotes{
+	background-color: text-color-light-2;
 	color: text-color-dark-1;
 	font-size: font-size-medium;
 	margin-right: 10px;
