--- a/app/components/Song/Song.css
+++ b/app/components/Song/Song.css
@@ -1,13 +1,9 @@
 @value CONSTANTS: 'styles/variables.css';
-@value background-color-dark-2, background-color-base, text-color-light-2, font-size-small, font-size-normal from CONSTANTS;
+@value bg-color-1, bg-color-2, bg-color-3, bg-color-4, text-color-light-1, text-color-light-2, text-color-dark-1, light-blue, light-yellow,font-size-small, font-size-normal, font-size-medium, font-size-large, navbar-height, player-height from CONSTANTS;
 
 .song{
-	/* TODO */
-	/* background-color: color(background-color-dark-2 lightness(3%)); */
-	/* border-bottom: 1px solid color(background-color-base lightness(-1%)); */
-
 	background-color: inherit;
-	border-bottom: 1px solid color(#212020 lightness(-1%));
+	border-bottom: 1px solid bg-color-4;
 	margin: 0 auto;
 
 	&:last-child{
