--- a/app/components/PlaylistSong/PlaylistSong.css
+++ b/app/components/PlaylistSong/PlaylistSong.css
@@ -7,3 +7,9 @@
 	font-size: font-size-medium;
 	margin-right: 10px;
 }
+
+.song--top{
+	background-color: #1f1f1f;
+	box-shadow: 0px 0px 10px 1px #404040;
+	margin-top: 5px;
+}
