--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -3,7 +3,7 @@
 
 body{
 	background-color: #151515;
-	font-family: 'Lato', sans-serif;
+	font-family: 'Droid Sans', sans-serif;
 }
 
 p, h1, h2, h3, h4, h5, h6, span{
@@ -37,8 +37,6 @@ a{
 	}
 }
 
-.formControl{
-	background-color: bg-color-4;
-	border: 1px solid bg-color-3;
-	color: text-color-light-2;
+span{
+	vertical-align: middle;
 }
