--- a/app/views/Playlist/Playlist.css
+++ b/app/views/Playlist/Playlist.css
@@ -9,8 +9,7 @@
 
 .nextSongContainer{
 	background-color: bg-color-4;
-	border-radius: 10px;
-	box-shadow: 0px 0px 10px 1px #1d1c1c;
+	box-shadow: 0px 0px 10px 1px bg-color-1;
 	margin-bottom: 20px;
 	overflow: hidden;
 	padding: 8px 5px;
