--- a/app/components/MainMenu/MainMenu.css
+++ b/app/components/MainMenu/MainMenu.css
@@ -52,7 +52,9 @@
 	}
 
 	&Inner{
-		background-color: #c7c7c7;
+		/* TODO */
+		--base-color: #FFFFFF;
+		background-color: var(--base-color);
 		display: flex;
 		flex-direction: column;
 		height: 100%;
@@ -72,13 +74,14 @@
 	padding: 0;
 
 	&Item{
-		--common-color: #c7c7c7;
-		border-bottom: 1px solid color(var(--common-color) lightness(-5%));
+		/* TODO */
+		--base-color: #FFFFFF;
+		border-bottom: 1px solid color(var(--base-color) lightness(-5%));
 		cursor: pointer;
 		font-size: font-size-medium;
 
 		&:hover{
-			background-color: color(var(--common-color) lightness(-10%));
+			background-color: color(var(--base-color) lightness(-5%));
 		}
 
 		&Link{
@@ -91,4 +94,17 @@
 			margin-right: 5px;
 		}
 	}
+}
+
+.username{
+	/* TODO */
+	--base-color: #FFFFFF;
+	align-items: center;
+	background: color(var(--base-color) lightness(-5%));
+	color: black;
+	cursor: default;
+	display: flex;
+	font-size: 2em;
+	height: 100px;
+	justify-content: center;
 }
