--- a/app/views/Searches/Searches.less
+++ b/app/views/Searches/Searches.less
@@ -5,3 +5,24 @@
 	border: 1px solid @bg-color-3;
 	color: @text-color-light-2;
 }
+
+.errorMessage{
+
+}
+
+.fetchingDivContainer{
+	height: 100%;
+	left: 0;
+	padding: 15px;
+	position: absolute;
+	top: 0;
+	width: 100%;
+
+	&Inner{
+		align-items: center;
+		background-color: rgba(0, 0, 0, 0.5);
+		display: flex;
+		height: 100%;
+		justify-content: center;
+	}
+}
