--- a/app/components/Spinner/Spinner.less
+++ b/app/components/Spinner/Spinner.less
@@ -7,8 +7,8 @@
 	width: 100%;
 
 	&Inner{
+		// background-color: rgba(0, 0, 0, 0.3);
 		align-items: center;
-		background-color: rgba(0, 0, 0, 0.3);
 		display: flex;
 		height: 100%;
 		justify-content: center;
