--- a/app/views/Searches/Searches.less
+++ b/app/views/Searches/Searches.less
@@ -5,3 +5,7 @@
 	border: 1px solid @bg-color-3;
 	color: @text-color-light-2;
 }
+
+.searchInfo{
+	composes: songsListInfo from 'components/SongsList/SongsList.less';
+}
