--- a/app/styles/base.less
+++ b/app/styles/base.less
@@ -1,3 +1,10 @@
+html, body {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	width: 100%;
+}
+
 body{
 	background-color: #151515;
 	font-family: 'Droid Sans', sans-serif;
@@ -9,6 +16,7 @@ p, h1, h2, h3, h4, h5, h6{
 }
 
 ul{
+
 	list-style-type: none;
 }
 
