--- a/app/components/PlaylistSong/PlaylistSong.less
+++ b/app/components/PlaylistSong/PlaylistSong.less
@@ -9,7 +9,7 @@
 }
 
 .song--top{
+	// box-shadow: 0px 0px 10px 1px #404040;
 	background-color: #1f1f1f;
-	box-shadow: 0px 0px 10px 1px #404040;
 	margin-top: 5px;
 }
