--- a/app/styles/base.less
+++ b/app/styles/base.less
@@ -7,7 +7,7 @@ html, body {
 
 body{
 	background-color: #151515;
-	font-family: 'Droid Sans', sans-serif;
+	font-family: 'Open Sans';
 }
 
 p, h1, h2, h3, h4, h5, h6{
