[improve] main menu transition performance

--- a/app/components/Player/Player.less
+++ b/app/components/Player/Player.less
@@ -30,17 +30,24 @@
 			width: 150px;
 		}
 
+		.playerPluginContainer{
+			border-radius: 5px;
+			border: 10px solid #262626;
+			display: block;
+			margin-top: 20px;
+		}
+
 		.playerProgressBarContainer{
-			.u-position-left-bottom();
 			cursor: pointer;
-			height: 50px;
+			margin-top: 20px;
 			width: 150px;
 			z-index: 10;
 		}
 
 		.playerProgressBarInner{
-			.u-position-left-bottom();
+			border-radius: 3px;
 			height: 10px;
+			overflow: hidden;
 		}
 
 		.songDetail{
@@ -49,15 +56,11 @@
 
 		.songTitle{
 			font-size: @font-size-large;
-			margin-top: 60px;
+			margin-top: 20px;
 		}
 
 		.controlButtons{
 			font-size: 50px;
-		}
-
-		.playerPluginContainer{
-			display: block;
 		}
 	}
 }
