--- a/app/styles/base.less
+++ b/app/styles/base.less
@@ -1,3 +1,5 @@
+@import './variables.less';
+
 html, body {
 	height: 100%;
 	margin: 0;
@@ -38,4 +40,10 @@ a{
 		color: inherit;
 		text-decoration: none;
 	}
+}
+
+input[type="text"]{
+	background-color: @bg-color-2;
+	border: 1px solid @bg-color-3;
+	color: @text-color-light-2;
 }
