--- a/app/styles/util.less
+++ b/app/styles/util.less
@@ -82,3 +82,15 @@
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#e6000000',GradientType=0 ); /* IE6-9 */
 	-ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000',endColorstr='#e6000000',GradientType=0);
 }
+
+.u-text-center{
+	text-align: center !important;
+}
+
+.u-text-left{
+	text-align: left !important;
+}
+
+.u-text-right{
+	text-align: right !important;
+}
