--- a/app/components/Player/Player.less
+++ b/app/components/Player/Player.less
@@ -9,7 +9,7 @@
 	transition-property: height;
 	width: 100%;
 
-	&__opened{
+	&--opened{
 		composes: player;
 		height: calc(~"100% - " (@navbar-height - 1));
 
@@ -18,11 +18,22 @@
 			width: 95%;
 		}
 
+		.playingSongContainer{
+			text-align: center;
+			flex-direction: column;
+			padding-top: 0;
+			justify-content: center;
+		}
+
+		.playerWrapper{
+			padding: 0;
+		}
+
 		.songThumbnail{
 			display: none;
 		}
 
-		.columnPlayerInner{
+		.playerWrapperInner{
 			margin: 0 auto;
 			position: relative;
 			width: 150px;
@@ -32,7 +43,6 @@
 			border-radius: 5px;
 			border: 10px solid #262626;
 			display: block;
-			margin-top: 20px;
 		}
 
 		.playerProgressBarContainer{
@@ -48,6 +58,12 @@
 			overflow: hidden;
 		}
 
+		.detailsWrapper{
+			flex-grow: 0;
+			padding: 0;
+			margin: 20px 0;
+		}
+
 		.songDetail{
 			font-size: @font-size-medium;
 		}
@@ -55,6 +71,10 @@
 		.songTitle{
 			font-size: @font-size-large;
 			margin-top: 20px;
+		}
+
+		.buttonsWrapper{
+			padding: 0;
 		}
 
 		.controlButtons{
@@ -70,10 +90,33 @@
 .expandButton{
 	color: @text-color-light-1;
 	width: 100%;
+	cursor: pointer;
 }
 
 .contentWrapper{
 	height: 100%;
+}
+
+.noPlayingSongContainer{
+	align-items: center;
+	background-color: black;
+	color: @text-color-light-1;
+	display: flex;
+	font-size: @font-size-medium;
+	height: 100%;
+	justify-content: center;
+}
+
+.playingSongContainer{
+	align-items: center;
+	flex-direction: row;
+	height: 100%;
+	margin: 0;
+	padding: 20px 10px 0 10px;
+}
+
+.playerWrapper{
+	padding: 0 10px;
 }
 
 .songThumbnail{
@@ -81,6 +124,12 @@
 	margin: 0px auto;
 	max-width: 100%;
 	width: 50px;
+}
+
+.playerPluginContainer{
+	display: none;
+	height: 150px;
+	width: 100%;
 }
 
 .playerProgressBarContainer{
@@ -100,6 +149,11 @@
 	height: 100%;
 }
 
+.detailsWrapper{
+	flex-grow: 1;
+	padding: 0 10px;
+}
+
 .songDetail{
 	color: @text-color-light-1;
 	display: block;
@@ -108,33 +162,13 @@
 
 .songTitle{
 	composes: songDetail;
-	margin-top: 4px;
+}
+
+.buttonsWrapper{
+	padding: 0 10px;
 }
 
 .controlButtons{
 	color: @text-color-light-2;
 	cursor: pointer;
-	margin-top: 8px;
-}
-
-.playerPluginContainer{
-	display: none;
-	height: 150px;
-	width: 100%;
-}
-
-.playingSongContainer{
-	height: 100%;
-	margin: 0;
-	padding-top: 28px;
-}
-
-.noPlayingSongContainer{
-	background-color: black;
-	color: @text-color-light-1;
-	font-size: @font-size-medium;
-	height: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 }
