--- a/app/components/PlaylistSong/PlaylistSong.less
+++ b/app/components/PlaylistSong/PlaylistSong.less
@@ -1,15 +1,24 @@
 @import '../../styles/variables.less';
 
-.song__playlistVotes{
-	background-color: @text-color-light-2;
-	color: @text-color-dark-1;
-	cursor: default;
-	font-size: @font-size-medium;
-	margin-right: 10px;
-}
-
 .song--top{
 	background-color: #1f1f1f;
 	box-shadow: 0px 0px 10px 1px #404040;
 	margin-top: 5px;
+}
+
+.votes{
+	background-color: @text-color-light-2;
+	border-radius: 10px;
+	color: @text-color-dark-1;
+	cursor: default;
+	display: inline-block;
+	font-size: @font-size-medium;
+	font-weight: 700;
+	line-height: 1;
+	margin-right: 10px;
+	min-width: 10px;
+	padding: 3px 7px;
+	text-align: center;
+	vertical-align: middle;
+	white-space: nowrap;
 }
