--- a/app/components/Song/Song.less
+++ b/app/components/Song/Song.less
@@ -1,54 +1,15 @@
 @import '../../styles/variables.less';
 
-.song{
+.songWrapper{
+	align-items: center;
 	background-color: inherit;
 	border-bottom: 1px solid @bg-color-4;
+	display: flex;
+	flex-direction: row;
 	margin: 0 auto;
+	padding: 10px;
 
 	&:last-child{
 		border: 0;
-	}
-
-	&Inner{
-		height: 70px;
-		padding: 10px;
-	}
-
-	&Thumbnail{
-		&Wrapper{
-			height: 50px;
-			position: absolute;
-			width: 50px;
-		}
-
-		&Img{
-			height: 100%;
-			width: 100%;
-		}
-
-		&Duration{
-			color: @text-color-light-2;
-			font-size: @font-size-small;
-			margin: 0;
-			padding: 3px 5px;
-			width: 100%;
-		}
-	}
-
-	&Details{
-		&Wrapper{
-			padding-left: 60px;
-		}
-
-		&Title{
-			color: @text-color-light-2;
-			font-size: @font-size-normal;
-			margin-bottom: 0;
-		}
-	}
-
-	&Button{
-		color: @text-color-light-2;
-		margin: 0 7px;
 	}
 }
