--- a/app/styles/base.less
+++ b/app/styles/base.less
@@ -1,5 +1,9 @@
 @import './variables.less';
 
+* {
+	box-sizing: border-box;
+}
+
 html, body {
 	height: 100%;
 	margin: 0;
@@ -10,6 +14,7 @@ html, body {
 body{
 	background-color: #151515;
 	font-family: 'Open Sans';
+	font-size: 14px;
 }
 
 p, h1, h2, h3, h4, h5, h6{
@@ -44,6 +49,21 @@ a{
 
 input[type="text"]{
 	background-color: @bg-color-2;
+	background-image: none;
+	border-radius: 4px;
 	border: 1px solid @bg-color-3;
 	color: @text-color-light-2;
+	display: block;
+	font-size: 14px;
+	height: 34px;
+	line-height: 1.42857143;
+	outline: 0;
+	padding: 6px 12px;
+	width: 100%;
+
+	&:focus {
+		border-color: #66afe9;
+		box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
+		outline: 0;
+	}
 }
