[improve] function to normalize songs duration

--- a/app/styles/base.less
+++ b/app/styles/base.less
@@ -34,8 +34,13 @@ i{
 button{
 	background-color: inherit;
 	border: 0;
+	cursor: pointer;
 	outline: 0;
 	padding: 0;
+}
+
+p{
+	margin: 0;
 }
 
 a{
