--- a/app/components/Player/Player.less
+++ b/app/components/Player/Player.less
@@ -62,6 +62,7 @@
 			flex-grow: 0;
 			padding: 0;
 			margin: 20px 0;
+			width: 100%;
 		}
 
 		.songDetail{
@@ -75,6 +76,7 @@
 
 		.buttonsWrapper{
 			padding: 0;
+			width: 100%;
 		}
 
 		.controlButtons{
@@ -90,7 +92,6 @@
 .expandButton{
 	color: @text-color-light-1;
 	width: 100%;
-	cursor: pointer;
 }
 
 .contentWrapper{
@@ -152,6 +153,7 @@
 .detailsWrapper{
 	flex-grow: 1;
 	padding: 0 10px;
+	width: 55%;
 }
 
 .songDetail{
@@ -165,7 +167,10 @@
 }
 
 .buttonsWrapper{
+	flex-shrink: 0;
 	padding: 0 10px;
+	text-align: center;
+	width: 25%;
 }
 
 .controlButtons{
