--- a/app/containers/Favorites/Favorites.less
+++ b/app/containers/Favorites/Favorites.less
@@ -5,14 +5,19 @@
 
 	&Title{
 		color: #8e9a2f;
+		cursor: pointer;
 		font-size: 1.2em;
 		margin: 0;
 		padding: 5px 40px 5px 10px;
+	}
+
+	&:last-child{
+		margin-bottom: 0;
 	}
 }
 
 .expandButton{
 	color: white;
 	right: 5px;
-	top: 6px;
+	top: 4px;
 }
