[implemented] classnames in some components and update songs duration styles

--- a/app/components/Song/Thumbnail/Thumbnail.less
+++ b/app/components/Song/Thumbnail/Thumbnail.less
@@ -14,13 +14,14 @@
 	}
 
 	&Duration{
-		bottom: 0;
+		background-color: black;
+		border-radius: 3px;
+		bottom: 1px;
 		color: @text-color-light-2;
+		cursor: default;
 		font-size: @font-size-small;
-		left: 0;
 		margin: 0;
-		padding: 3px 5px;
-		position: absolute;
-		width: 100%;
+		padding: 1px 3px;
+		right: 1px;
 	}
 }
