--- a/app/styles/util.less
+++ b/app/styles/util.less
@@ -94,3 +94,19 @@
 .u-text-right{
 	text-align: right !important;
 }
+
+.u-display-block{
+	display: block !important;
+}
+
+.u-display-inline-block{
+	display: inline-block !important;
+}
+
+.u-display-flex{
+	display: flex !important;
+}
+
+.u-hide{
+	display: none !important;
+}
