[finished] to implement classnames in all components

--- a/app/components/PlaylistSong/PlaylistSong.less
+++ b/app/components/PlaylistSong/PlaylistSong.less
@@ -6,6 +6,10 @@
 	margin-top: 5px;
 }
 
+.button--top{
+	color: #d2a90b;
+}
+
 .votes{
 	background-color: @text-color-light-2;
 	border-radius: 10px;
