--- a/app/components/Song/Body/Body.less
+++ b/app/components/Song/Body/Body.less
@@ -6,8 +6,12 @@
 	width: 70%;
 }
 
+.body{
+	display: none;
+	margin: 5px 0;
+}
+
 .button{
 	color: @text-color-light-2;
-	cursor: pointer;
 	margin: 0 7px;
 }
