--- a/app/components/Player/Player.less
+++ b/app/components/Player/Player.less
@@ -102,7 +102,7 @@
 	align-items: center;
 	background-color: black;
 	color: @text-color-light-1;
-	display: flex;
+	display: none;
 	font-size: @font-size-medium;
 	height: 100%;
 	justify-content: center;
