[add] css transitions in favorites page

--- a/app/containers/Favorites/Favorites.less
+++ b/app/containers/Favorites/Favorites.less
@@ -12,7 +12,14 @@
 	}
 
 	&Songs{
-		display: none;
+		&Content{
+			transition: opacity 500ms ease-in-out;
+			opacity: 0;
+
+			&--visible{
+				opacity: 1;
+			}
+		}
 	}
 
 	&:last-child{
