--- a/app/components/Player/Player.less
+++ b/app/components/Player/Player.less
@@ -178,3 +178,19 @@
 	color: @text-color-light-2;
 	cursor: pointer;
 }
+
+.favoriteButtonAnimated{
+	color: red;
+}
+
+//Extra small devices Phones
+@media screen and (max-width : 767px)
+{
+	.detailsWrapper{
+		width: 50%;
+	}
+
+	.buttonsWrapper{
+		width: 30%;
+	}
+}
