--- a/app/components/Song/components/Body/Body.less
+++ b/app/components/Song/components/Body/Body.less
@@ -14,4 +14,10 @@
 .button{
 	color: @text-color-light-2;
 	margin: 0 7px;
+	position: relative;
+
+	.material-icons{
+		transition-property: all;
+		transition: 1s;
+	}
 }
