[fix] minor bug in player favorite button

--- a/app/components/Player/Player.less
+++ b/app/components/Player/Player.less
@@ -179,6 +179,11 @@
 	cursor: pointer;
 }
 
+.controlButtons--favorite{
+	transition-property: color;
+	transition: 1s;
+}
+
 .favoriteButtonAnimated{
 	color: red;
 }
