--- a/app/components/Song/Song.less
+++ b/app/components/Song/Song.less
@@ -50,7 +50,7 @@
 	transform: scale(1.5) rotate(360deg);
 	transition-duration: 1s;
 	transition-property: all;
-	transition-timing-function: ease-in;
+	transition-timing-function: linear;
 }
 
 .addSongToFavoritesAnimation{
