[improved] way to load favorite sprite image

--- a/app/components/Song/components/Body/Body.less
+++ b/app/components/Song/components/Body/Body.less
@@ -12,11 +12,13 @@
 }
 
 .button{
+	background-image: url('/assets/player/images/favorite-sprite.png');
+	background-size: 0 0;
 	color: @text-color-light-2;
 	margin: 0 7px;
 	position: relative;
 
-	.material-icons{
+	i{
 		transition-property: all;
 		transition: 1s;
 	}
