Removed JWPlayer and added Plyr

--- a/app/components/Player/Player.less
+++ b/app/components/Player/Player.less
@@ -132,6 +132,15 @@
 	display: none;
 	height: 150px;
 	width: 100%;
+
+  iframe{
+    width: 100% !important;
+    height: 130px !important;
+  }
+
+  div{
+    padding: 0 !important;
+  }
 }
 
 .playerProgressBarContainer{
